--- a/package.json
+++ b/package.json
@@ -19,10 +19,15 @@
     "nodemon": "^1.18.7"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-facebook": "^3.0.0",
+    "passport-facebook-token": "^4.0.0",
     "sequelize": "^6.5.0"
   }
 }
