--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.16.3",
     "express-session": "^1.17.1",
+    "geolocation-utils": "^1.2.3",
     "if-env": "^1.0.4",
     "mysql2": "^2.2.5",
     "passport": "^0.4.1",
